thought i had labels working but not working at al

--- a/spinrate.ipynb
+++ b/spinrate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 599,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 599,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,14 +28,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 600,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "119.88011988011988\n"
+      "0.0\n",
+      "Cannot open video file.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "OpenCV: Couldn't read video stream from file \"/Users/danielrosenthal/Documents/EGR_314/colorblock2.mp4\"\n"
      ]
     }
    ],
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 601,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,18 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 602,
    "metadata": {},
    "outputs": [],
    "source": [
     "#defining size for output videos\n",
-    "output = cv2.VideoWriter('/Users/danielrosenthal/Documents/EGR_314/output.mp4', cv2.VideoWriter_fourcc(*'mp4v'), 20.0, (1920,1080))\n",
+    "output = cv2.VideoWriter('/Users/danielrosenthal/Documents/EGR_314/colorblock.mp4', cv2.VideoWriter_fourcc(*'mp4v'), 20.0, (1920,1080))\n",
     "#output2 = cv2.VideoWriter('output2.mp4', cv2.VideoWriter_fourcc(*'MP4V'), 20.0, (1920,1080))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 603,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 604,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 605,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,30 +118,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 606,
    "metadata": {},
    "outputs": [],
    "source": [
     "#conversion factor, likely incorrect bc camera and setup need to be calibrated\n",
     "disc_length = 8.26 #disc length in inches\n",
     "distance = 36 #distance of disc from camera, rough guess\n",
+    "\n",
+    "#initializing\n",
     "conversion_rate = 0\n",
     "rect_coordinates = 0\n",
-    "new_data = None"
+    "new_data = None\n",
+    "counter = 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 607,
    "metadata": {},
    "outputs": [],
    "source": [
-    "orb = cv2.ORB_create()"
+    "prev_frame = None\n",
+    "threshold = 500\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 608,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,61 +167,94 @@
     "    _, mask = cv2.threshold(mask, 254, 255, cv2.THRESH_BINARY)\n",
     "    contours, _ = cv2.findContours(mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "\n",
+    "\n",
     "    #trying rgb threshold\n",
     "    mask = cv2.cvtColor(frame,cv2.COLOR_BGR2HSV) \n",
-    "    mask_rgb = cv2.inRange(mask,blue_lower_bound,blue_upper_bound)\n",
+    "    mask_blue = cv2.inRange(mask,blue_lower_bound,blue_upper_bound)\n",
+    "    blue_contours, _ = cv2.findContours(mask_blue, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    large_contours = [cnt for cnt in blue_contours if cv2.contourArea(cnt) > threshold]\n",
+    "    \n",
+    "    mask_rgb = cv2.inRange(mask,lower_color_bound,upper_color_bound)\n",
     "    rgb_contours, _ = cv2.findContours(mask_rgb, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "       \n",
-    "    \n",
-    "    longest_width = 0\n",
-    "    for cnt in rgb_contours:\n",
-    "        #calculate error, remove small elements\n",
-    "        area = cv2.contourArea(cnt)\n",
-    "        if area > 500:\n",
-    "            cv2.drawContours(frame, [cnt], -1, (0,255,0), 2)\n",
-    "            #drawing rectangle around detected objects\n",
-    "            x, y, w, h = cv2.boundingRect(cnt)\n",
-    "            if w > longest_width:\n",
-    "                longest_width = w\n",
-    "            #print(longest_width)\n",
-    "            rect_coordinates = np.append(rect_coordinates,[x,y,w,h])\n",
-    "            # cv2.rectangle(frame, (x, y), (x + w, y + h), (0,255,0),3)\n",
+    "    contour_labels = []\n",
+    "\n",
+    "    # longest_width = 0\n",
+    "    # for cnt in blue_contours:\n",
+    "    #     #calculate error, remove small elements\n",
+    "    #     area = cv2.contourArea(cnt)\n",
+    "    #     if area > 500:\n",
+    "    #         cv2.drawContours(frame, [cnt], -1, (0,255,0), 2)\n",
+    "    #         #drawing rectangle around detected objects\n",
+    "    #         x, y, w, h = cv2.boundingRect(cnt)\n",
+    "    #         if w > longest_width:\n",
+    "    #             longest_width = w\n",
+    "    #         #print(longest_width)\n",
+    "    #         rect_coordinates = np.append(rect_coordinates,[x,y,w,h])\n",
+    "    #         cv2.rectangle(frame, (x, y), (x + w, y + h), (0,255,0),3)\n",
+    "                \n",
+    "    #         # # Assign a unique identifier to the contour\n",
+    "    #         # identifier = \"Contour {}\".format(counter)\n",
+    "    #         # counter += 1\n",
     "        \n",
-    "        # keypoints, descriptors = orb.detectAndCompute(cnt, None)\n",
-    "        # frame_keypoints = cv2.drawKeypoints(frame, keypoints, None)\n",
+    "    #         # # Put the identifier on the frame\n",
+    "    #         # cv2.putText(frame, identifier, (x, y), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255), 2)\n",
     "            \n",
-    "    if longest_width > 0:\n",
-    "        conversion_rate = disc_length / longest_width\n",
+    "    # if longest_width > 0:\n",
+    "    #     conversion_rate = disc_length / longest_width\n",
     "    \n",
     "\n",
-    "    # Check if previous position and time are available\n",
-    "    if prev_x is not None and prev_y is not None and prev_time is not None:\n",
-    "        # Calculate the distance traveled in the x and y directions\n",
-    "        dx = x - prev_x\n",
-    "        dy = y - prev_y\n",
+    "    # # Check if previous position and time are available\n",
+    "    # if prev_x is not None and prev_y is not None and prev_time is not None:\n",
+    "    #     # Calculate the distance traveled in the x and y directions\n",
+    "    #     dx = x - prev_x\n",
+    "        # dy = y - prev_y\n",
     "\n",
-    "        # Calculate the time interval\n",
-    "        dt = current_time - prev_time\n",
+    "        # # Calculate the time interval\n",
+    "        # dt = current_time - prev_time\n",
     "\n",
-    "        # Calculate the velocity in the x and y directions\n",
-    "        vx = (dx / dt) \n",
-    "        vy = (dy / dt)\n",
+    "        # # Calculate the velocity in the x and y directions\n",
+    "        # vx = (dx / dt) \n",
+    "        # vy = (dy / dt)\n",
     "        \n",
-    "        # Add the velocity values to the DataFrame\n",
-    "        velocities = pd.concat([velocities, new_data])\n",
+    "        # # Add the velocity values to the DataFrame\n",
+    "        # velocities = pd.concat([velocities, new_data])\n",
     "\n",
-    "        vx_mph = vx * conversion_rate\n",
-    "        vy_mph = vy * conversion_rate\n",
-    "        velocity = np.linalg.norm([vx_mph, vy_mph])\n",
+    "        # vx_mph = vx * conversion_rate\n",
+    "        # vy_mph = vy * conversion_rate\n",
+    "        # velocity = np.linalg.norm([vx_mph, vy_mph])\n",
     "\n",
-    "        # Display the velocity values on the output video\n",
-    "        cv2.putText(frame, 'X Velocity: {:.2f} mph'.format(vx_mph), (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
-    "        cv2.putText(frame, 'Y Velocity: {:.2f} mph'.format(vy_mph), (10, 60), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
-    "        cv2.putText(frame, 'True Velocity: {:.2f} mph'.format(velocity), (10, 90), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
+    "        # # Display the velocity values on the output video\n",
+    "        # cv2.putText(frame, 'X Velocity: {:.2f} mph'.format(vx_mph), (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
+    "        # cv2.putText(frame, 'Y Velocity: {:.2f} mph'.format(vy_mph), (10, 60), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
+    "        # cv2.putText(frame, 'True Velocity: {:.2f} mph'.format(velocity), (10, 90), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
     "\n",
-    "        # create a new dataframe with the new velocities\n",
-    "        new_data = pd.DataFrame({'x_velocity': [vx_mph], 'y_velocity': [vy_mph]})\n",
+    "        # # create a new dataframe with the new velocities\n",
+    "        # new_data = pd.DataFrame({'x_velocity': [vx_mph], 'y_velocity': [vy_mph]})\n",
     "\n",
+    "\n",
+    "\n",
+    "    if prev_frame == None:\n",
+    "        contour_areas = [cv2.contourArea(cnt) for cnt in large_contours]\n",
+    "        prev_frame = [cv2.contourArea(cnt) for cnt in large_contours]\n",
+    "        for i in range(len(large_contours)):\n",
+    "            contour_labels.append(i+1)\n",
+    "\n",
+    "    else:\n",
+    "        contour_areas = [cv2.contourArea(cnt) for cnt in large_contours]\n",
+    "        curr_frame = [cv2.contourArea(cnt) for cnt in large_contours]\n",
+    "        for i in range(len(large_contours)):\n",
+    "            # Find the closest previous contour to the current contour\n",
+    "            closest_previous_index = min(range(len(prev_frame)), key=lambda j: abs(prev_frame[j]-curr_frame[i]))\n",
+    "            contour_labels.append(closest_previous_index+1)\n",
+    "\n",
+    "    prev_frame = curr_frame\n",
+    "\n",
+    "    for i in range(len(large_contours)):\n",
+    "        x, y, w, h = cv2.boundingRect(large_contours[i])\n",
+    "        cv2.putText(frame, str(contour_labels[i]), (x, y-10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (255, 0, 0), 2)\n",
+    "        cv2.drawContours(frame, [large_contours[i]], 0, (0, 0, 255), 2)       \n",
+    "    \n",
     "    # Update the previous position and time variables\n",
     "    prev_x, prev_y = x, y\n",
     "    prev_time = current_time\n",
@@ -234,62 +279,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 609,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    x_velocity  y_velocity\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0     0.000000    0.000000\n",
-      "0 -1552.849080   59.204486\n",
-      "0    88.660736   -8.692229\n",
-      "0    59.005951   -4.214711\n",
-      "0    50.486537   -2.524327\n",
-      "0    61.647663   -3.424870\n",
-      "0    71.930826   -0.733988\n",
-      "0    74.892172    8.987061\n",
-      "0   139.594836   -7.931525\n",
-      "0    68.775657  -11.228679\n",
-      "0    46.748225   -3.420602\n",
-      "0    39.081128   -3.085352\n",
-      "0    47.203251   -2.170264\n",
-      "0    64.544725   -2.607868\n",
-      "0    70.390175    5.976524\n",
-      "0   126.462291    3.871295\n",
-      "0    62.738626  -12.065120\n",
-      "0    41.535076   -4.247906\n",
-      "0    33.266305   -1.622747\n",
-      "0   144.606202   13.146018\n"
+      "Empty DataFrame\n",
+      "Columns: [x_velocity, y_velocity]\n",
+      "Index: []\n"
      ]
     }
    ],
