labels almost working

--- a/spinrate.ipynb
+++ b/spinrate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 599,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,28 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n",
-      "Cannot open video file.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "OpenCV: Couldn't read video stream from file \"/Users/danielrosenthal/Documents/EGR_314/colorblock2.mp4\"\n"
+      "119.88011988011988\n"
      ]
     }
    ],
    "source": [
     "#open video\n",
-    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/colorblock2.mp4')\n",
+    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/colorblock_trim.mp4')\n",
     "fps = cap.get(cv2.CAP_PROP_FPS) #get fps\n",
     "print(fps)\n",
     "if cap.isOpened() == False:\n",
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,18 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "#defining size for output videos\n",
-    "output = cv2.VideoWriter('/Users/danielrosenthal/Documents/EGR_314/colorblock.mp4', cv2.VideoWriter_fourcc(*'mp4v'), 20.0, (1920,1080))\n",
+    "output = cv2.VideoWriter('/Users/danielrosenthal/Documents/EGR_314/colorblock_output.mp4', cv2.VideoWriter_fourcc(*'mp4v'), 20.0, (1920,1080))\n",
     "#output2 = cv2.VideoWriter('output2.mp4', cv2.VideoWriter_fourcc(*'MP4V'), 20.0, (1920,1080))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,17 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "prev_frame = None\n",
-    "threshold = 500\n"
+    "curr_frame = None\n",
+    "threshold = 500\n",
+    "x = 0\n",
+    "y = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 608,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
