first attempt at spin rate, numbers not accurate

--- a/spinrate.ipynb
+++ b/spinrate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
    ],
    "source": [
     "#open video\n",
-    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/colorblock_trim.mp4')\n",
+    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/1080_120_1000_trim.mp4')\n",
     "fps = cap.get(cv2.CAP_PROP_FPS) #get fps\n",
     "print(fps)\n",
     "if cap.isOpened() == False:\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,26 +83,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [],
    "source": [
     "#creating empty array\n",
     "# Create an empty DataFrame with columns for x and y velocities\n",
     "velocities = pd.DataFrame(columns=['x_velocity', 'y_velocity'])\n",
-    "prev_x, prev_y = None, None\n",
-    "prev_time = None\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
     "#defining rgb range to detect orange for now\n",
-    "lower_color_bound = np.array([0,100,178])\n",
-    "upper_color_bound = np.array([255,255,255])\n",
+    "orange_lower_bound = np.array([0,70,188])\n",
+    "orange_upper_bound = np.array([30,255,255])\n",
     "\n",
     "blue_lower_bound = np.array([100,80,80])\n",
     "blue_upper_bound = np.array([170,255,255])\n",
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,19 +120,20 @@
     "disc_length = 8.26 #disc length in inches\n",
     "distance = 36 #distance of disc from camera, rough guess\n",
     "\n",
-    "#initializing\n",
-    "conversion_rate = 0\n",
-    "rect_coordinates = 0\n",
-    "new_data = None\n",
-    "counter = 0\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#initializing\n",
+    "conversion_rate = 0\n",
+    "rect_coordinates = 0\n",
+    "new_data = None\n",
+    "counter = 0\n",
     "prev_frame = None\n",
     "curr_frame = None\n",
     "threshold = 500\n",
@@ -141,14 +141,61 @@
     "y = 0\n",
     "centers_and_labels = {}\n",
     "prev_centers_and_labels = {}\n",
-    "distance_threshold = 50"
+    "distance_threshold = 50\n",
+    "prev_blue_centers = []\n",
+    "prev_orange_centers = []\n",
+    "prev_x, prev_y = None, None\n",
+    "prev_time = None\n",
+    "time_interval = 1/fps\n",
+    "avg_rpm_blue = 0\n",
+    "avg_rpm_orange = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 404,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blue spin rate: -3.119050934735971 rps\n",
+      "Blue spin rate: -3.7998611810740566 rps\n",
+      "Blue spin rate: -5.385334337589926 rps\n",
+      "Blue spin rate: -6.014143168897497 rps\n",
+      "Blue spin rate: -6.6917186786229825 rps\n",
+      "Blue spin rate: -5.677332991045561 rps\n",
+      "Blue spin rate: -4.347401672925941 rps\n",
+      "Blue spin rate: -1.9571736951858596 rps\n",
+      "Blue spin rate: 0.5373090019584356 rps\n",
+      "Blue spin rate: 2.027481902828896 rps\n",
+      "Blue spin rate: 2.6758943425024286 rps\n",
+      "Blue spin rate: 2.4746613290617736 rps\n",
+      "Blue spin rate: 1.1666772043904288 rps\n",
+      "Blue spin rate: 0.0 rps\n",
+      "Blue spin rate: -1.679137885171799 rps\n",
+      "Blue spin rate: -3.4657713328305215 rps\n",
+      "Blue spin rate: -4.825095768859289 rps\n",
+      "Blue spin rate: -5.926070237739054 rps\n",
+      "Blue spin rate: -6.845169903291197 rps\n",
+      "Blue spin rate: -6.4100985257015415 rps\n",
+      "Blue spin rate: -5.309822144829455 rps\n",
+      "Blue spin rate: -2.8061834903365543 rps\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (0,) (1,2) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=104'>105</a>\u001b[0m \u001b[39mif\u001b[39;00m prev_blue_centers \u001b[39mand\u001b[39;00m prev_orange_centers:\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=105'>106</a>\u001b[0m     \u001b[39m# Calculate the change in the positions of the centers\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=106'>107</a>\u001b[0m     delta_blue_centers \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(blue_centers) \u001b[39m-\u001b[39m np\u001b[39m.\u001b[39marray(prev_blue_centers)\n\u001b[0;32m--> <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=107'>108</a>\u001b[0m     delta_orange_centers \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49marray(orange_centers) \u001b[39m-\u001b[39;49m np\u001b[39m.\u001b[39;49marray(prev_orange_centers)\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=109'>110</a>\u001b[0m     \u001b[39m# Calculate the angular velocity of the disc in radians per second\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=110'>111</a>\u001b[0m     spin_rate_blue \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marctan2(delta_blue_centers[:,\u001b[39m1\u001b[39m], delta_blue_centers[:,\u001b[39m0\u001b[39m]) \u001b[39m/\u001b[39m time_interval\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (0,) (1,2) "
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    # Get current time\n",
@@ -173,14 +220,17 @@
     "    mask = cv2.cvtColor(frame,cv2.COLOR_BGR2HSV) \n",
     "    mask_blue = cv2.inRange(mask,blue_lower_bound,blue_upper_bound)\n",
     "    mask_yellow = cv2.inRange(mask,yellow_lower_bound, yellow_upper_bound)\n",
+    "    mask_orange = cv2.inRange(mask,orange_lower_bound,orange_upper_bound)\n",
     "    \n",
     "    yellow_contours, _ = cv2.findContours(mask_yellow, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "    blue_contours, _ = cv2.findContours(mask_blue, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    orange_contours, _ = cv2.findContours(mask_orange,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
     "    \n",
-    "    large_contours = [cnt for cnt in blue_contours if cv2.contourArea(cnt) > threshold]\n",
+    "    blue_contours = [cnt for cnt in blue_contours if cv2.contourArea(cnt) > threshold]\n",
+    "    orange_contours = [cnt for cnt in orange_contours if cv2.contourArea(cnt) > threshold]\n",
     "    \n",
-    "    mask_rgb = cv2.inRange(mask,lower_color_bound,upper_color_bound)\n",
-    "    rgb_contours, _ = cv2.findContours(mask_rgb, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    # mask_rgb = cv2.inRange(mask,lower_color_bound,upper_color_bound)\n",
+    "    # rgb_contours, _ = cv2.findContours(mask_rgb, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "       \n",
     "    contour_labels = []\n",
     "\n",
@@ -233,59 +283,63 @@
     "        new_data = pd.DataFrame({'x_velocity': [vx_mph], 'y_velocity': [vy_mph]})\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "# everything below here is trying to calculate spin rate\n",
     "\n",
     "    # Find the center of each contour\n",
-    "    centers = []\n",
-    "    prev_center = None\n",
-    "    for cnt in large_contours:\n",
+    "    blue_centers = []\n",
+    "    for cnt in blue_contours:\n",
     "        M = cv2.moments(cnt)\n",
     "        cX = int(M[\"m10\"] / M[\"m00\"])\n",
     "        cY = int(M[\"m01\"] / M[\"m00\"])\n",
-    "        centers.append([cX, cY])\n",
+    "        blue_centers.append([cX, cY])\n",
+    "\n",
+    "    orange_centers = []\n",
+    "    for cnt in orange_contours:\n",
+    "        M = cv2.moments(cnt)\n",
+    "        cX = int(M[\"m10\"] / M[\"m00\"])\n",
+    "        cY = int(M[\"m01\"] / M[\"m00\"])\n",
+    "        orange_centers.append([cX, cY])\n",
+    "   \n",
+    "    # Calculate the spin rate of the disc\n",
+    "    if prev_blue_centers and prev_orange_centers:\n",
+    "        # Calculate the change in the positions of the centers\n",
+    "        delta_blue_centers = np.array(blue_centers) - np.array(prev_blue_centers)\n",
+    "        delta_orange_centers = np.array(orange_centers) - np.array(prev_orange_centers)\n",
     "        \n",
-    "    # If there are no centers, break out of the loop\n",
-    "    # if not centers:\n",
-    "    #     break\n",
+    "        # Calculate the angular velocity of the disc in radians per second\n",
+    "        spin_rate_blue = np.arctan2(delta_blue_centers[:,1], delta_blue_centers[:,0]) / time_interval\n",
+    "        spin_rate_orange = np.arctan2(delta_orange_centers[:,1], delta_orange_centers[:,0]) / time_interval\n",
+    "        \n",
+    "        # Calculate the average spin rate\n",
+    "        avg_spin_rate_blue = np.mean(spin_rate_blue)\n",
+    "        avg_spin_rate_orange = np.mean(spin_rate_orange)\n",
     "\n",
-    "    # Assign labels to the centers in the current frame\n",
-    "    if prev_centers_and_labels == {}:\n",
-    "        # First frame, assign labels to all centers\n",
-    "        for j in range(len(centers)):\n",
-    "            centers_and_labels[j] = [centers[j], j + 1]\n",
-    "    else:\n",
-    "        # Not the first frame, assign labels based on previous centers\n",
-    "        for j in range(len(centers)):\n",
-    "            closest_center = None\n",
-    "            closest_center_distance = float('inf')\n",
-    "            closest_center_label = None\n",
-    "            # Find the closest previous center\n",
-    "            for center_index, previous_center_and_label in prev_centers_and_labels.items():\n",
-    "                previous_center, previous_center_label = previous_center_and_label\n",
-    "                distance = np.sqrt((previous_center[0] - centers[j][0]) ** 2 + (previous_center[1] - centers[j][1]) ** 2)\n",
-    "                if distance < closest_center_distance:\n",
-    "                    closest_center = previous_center\n",
-    "                    closest_center_distance = distance\n",
-    "                    closest_center_label = previous_center_label\n",
-    "            # Assign the same label to the current center if it's close enough\n",
-    "            if closest_center_distance < distance_threshold:\n",
-    "                centers_and_labels[j] = [centers[j], closest_center_label]\n",
-    "            else:\n",
-    "                # If no close enough previous center was found, assign a new label\n",
-    "                centers_and_labels[j] = [centers[j], max(prev_centers_and_labels.values(), key=lambda x: x[1])[1] + 1]\n",
+    "        #convert to rpm\n",
+    "        avg_rpm_blue = avg_spin_rate_blue * 30 / np.pi\n",
+    "        avg_rpm_orange = avg_spin_rate_orange * 30 / np.pi\n",
     "\n",
-    "    for i in range(len(large_contours)):\n",
-    "        x, y, w, h = cv2.boundingRect(large_contours[i])\n",
-    "        cv2.putText(frame, str(centers_and_labels[i][1]), (x, y-10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (255, 255, 0), 2)\n",
+    "        #convert to rps\n",
+    "        avg_rps_blue = avg_spin_rate_blue / (2*np.pi)\n",
+    "        avg_rps_orange = avg_spin_rate_orange / (2*np.pi)\n",
+    "        \n",
+    "        print(\"Blue spin rate:\", avg_rps_blue, \"rps\")\n",
+    "        # print(\"Orange spin rate:\", avg_rps_orange, \"rps\")\n",
+    "    \n",
+    "    # Update the previous centers of the blue and orange quadrants\n",
+    "    prev_blue_centers = blue_centers\n",
+    "    prev_orange_centers = orange_centers\n",
+    "    \n",
+    "\n",
+    "    for i in range(len(blue_contours)):\n",
+    "        cv2.drawContours(frame, [blue_contours[i]], 0, (0, 0, 255), 2)\n",
+    "        cv2.putText(frame, 'Blue RPM: {:.2f} rpm'.format(avg_rpm_blue), (800, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
+    "\n",
+    "    for i in range(len(orange_contours)):\n",
+    "        x, y, w, h = cv2.boundingRect(orange_contours[i])\n",
+    "        # cv2.putText(frame, str(centers_and_labels[i][1]), (x, y-10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (255, 255, 0), 2)\n",
     "        # cv2.line(frame, tuple(centers_and_labels[i][1]), tuple(prev_centers_and_labels[i][0]), (255, 0, 0), 2)\n",
-    "        cv2.drawContours(frame, [large_contours[i]], 0, (0, 255, 255), 2)\n",
+    "        cv2.drawContours(frame, [orange_contours[i]], 0, (0, 0, 255), 2)\n",
+    "        cv2.putText(frame, 'Orange RPM: {:.2f} rpm'.format(avg_rpm_orange), (800, 60), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
     "        \n",
     "   \n",
     "    # Update the previous position and time variables\n",
@@ -298,7 +352,7 @@
     "    #cv2.imshow(\"Mask\", mask)\n",
     "    # cv2.imshow(\"mask yellow\",mask_yellow)\n",
     "    \n",
-    "    output.write(frame)\n",
+    "    # output.write(frame)\n",
     "    #output2.write(mask)\n",
     "    if cv2.waitKey(120) & 0xFF == ord('q'):\n",
     "        break\n",
@@ -312,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -321,35 +375,21 @@
      "text": [
       "   x_velocity  y_velocity\n",
       "0    0.000000    0.000000\n",
-      "0    0.000000    0.000000\n",
-      "0    0.000000    0.000000\n",
-      "0    0.000000    0.000000\n",
-      "0    0.000000    0.000000\n",
-      "0    0.000000    0.000000\n",
-      "0    0.000000    0.000000\n",
-      "0    0.000000    0.000000\n",
-      "0    0.000000    0.000000\n",
-      "0    0.000000    0.000000\n",
-      "0    0.000000  444.721670\n",
-      "0    2.897137   -0.724284\n",
-      "0   35.932844  -11.056260\n",
-      "0   30.167933   -8.379981\n",
-      "0   23.127696   -6.802263\n",
-      "0   20.775154   -5.770876\n",
-      "0   22.909330   -4.749495\n",
-      "0   21.314204   -5.074810\n",
-      "0   23.034379   -9.161401\n",
-      "0    3.343535   -7.164717\n",
-      "0    4.651946   -4.651946\n",
-      "0    9.595890   -4.545422\n",
-      "0   15.814965   -4.447959\n",
-      "0   18.745551   -4.271138\n",
-      "0   21.017918   -4.154705\n",
-      "0   19.653739   -6.785219\n",
-      "0   -0.921122   -8.980940\n",
-      "0   -0.836648   -5.019885\n",
-      "0    3.653529   -5.219327\n",
-      "0   28.837551   -7.864787\n"
+      "0    0.000000  203.173699\n",
+      "0   13.802114   -6.210951\n",
+      "0   35.627050   -3.995557\n",
+      "0   25.516785   -4.819837\n",
+      "0   23.658484   -8.603085\n",
+      "0   24.382174  -12.468157\n",
+      "0   22.568404  -20.419033\n",
+      "0   22.233402  -28.504362\n",
+      "0   15.662784  -27.544896\n",
+      "0    9.374932  -28.124795\n",
+      "0   -1.152070  -28.225708\n",
+      "0   -2.214641  -18.270788\n",
+      "0   -3.282859   -9.848577\n",
+      "0   -2.819397   -6.766553\n",
+      "0    0.556679   -5.010112\n"
      ]
     }
    ],
